--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,7 @@ version: '3.8'
 
 services:
   app:
-    container_name: docker-react-c
-    image: docker-react-i
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
       - 3000:3000
     volumes:
