--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,6 @@
   "plugins": ["@typescript-eslint", "react"],
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "no-unused-vars": "error",
-    "no-undef": "error"
+    "no-unused-vars": "error"
   }
 }
