--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write ./**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc.json"
+    "format": "prettier --write ./**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc.json",
+    "docker:dev": "docker compose -f docker-compose.yml up --build -d",
+    "docker:up": "docker compose -f docker-compose.yml up -d",
+    "docker:down": "docker compose -f docker-compose.yml down",
+    "docker:purge": "docker compose -f docker-compose.yml down -v"
   },
   "eslintConfig": {
     "extends": [
